Refactoring, Checkstyle