@@ -3,10 +3,10 @@ package de.samply.store.adapter.fhir.service.mapping;
 import static de.samply.store.adapter.fhir.service.mapping.Util.DATE_STRING;
 
 import de.samply.share.model.ccp.Patient;
-import de.samply.store.adapter.fhir.model.PatientContainer;
+import de.samply.store.adapter.fhir.model.PatientNode;
 import de.samply.store.adapter.fhir.service.FhirPathR4;
 import de.samply.store.adapter.fhir.service.PatientBuilder;
-import java.util.stream.Collectors;
+import java.util.Objects;
 import org.hl7.fhir.r4.model.CodeType;
 import org.hl7.fhir.r4.model.DateTimeType;
 import org.hl7.fhir.r4.model.DateType;
@@ -14,24 +14,39 @@ import org.hl7.fhir.r4.model.Enumeration;
 import org.hl7.fhir.r4.model.PrimitiveType;
 import org.springframework.stereotype.Component;
 
+/**
+ * Mapping of a FHIR Patient and other resources to MDS Patient.
+ */
 @Component
 public class PatientMapping {
 
   private final FhirPathR4 fhirPathEngine;
-  private DiagnosisMapping diagnosisMapping;
-  private SampleMapping sampleMapping;
+  private final DiagnosisMapping diagnosisMapping;
+  private final SampleMapping sampleMapping;
 
+  /**
+   * Creates a new PatientMapping.
+   *
+   * @param fhirPathEngine   the FHIRPath engine
+   * @param diagnosisMapping DiagnosisMapping
+   * @param sampleMapping    SampleMapping
+   */
   public PatientMapping(FhirPathR4 fhirPathEngine, DiagnosisMapping diagnosisMapping,
       SampleMapping sampleMapping) {
-    this.fhirPathEngine = fhirPathEngine;
-
-    this.diagnosisMapping = diagnosisMapping;
-    this.sampleMapping = sampleMapping;
+    this.fhirPathEngine = Objects.requireNonNull(fhirPathEngine);
+    this.diagnosisMapping = Objects.requireNonNull(diagnosisMapping);
+    this.sampleMapping = Objects.requireNonNull(sampleMapping);
   }
 
-  public Patient map(PatientContainer patientContainer) {
-
-    var patient = patientContainer.getPatient();
+  /**
+   * Maps a FHIR Patient and other resources to MDS Patient.
+   *
+   * @param patientNode the patient node which holds the Patient and other resources like the
+   *                    Condition und Specimen resources.
+   * @return the MDS Patient
+   */
+  public Patient map(PatientNode patientNode) {
+    var patient = patientNode.patient();
     var patientBuilder = new PatientBuilder(fhirPathEngine, patient);
 
     patientBuilder.addAttribute("Patient.gender", Enumeration.class, "urn:dktk:dataelement:1:3",
@@ -40,21 +55,21 @@ public class PatientMapping {
     patientBuilder.addAttributeOptional("Patient.birthDate", DateType.class,
         "urn:dktk:dataelement:26:4", DATE_STRING);
 
-    patientContainer.getVitalState().ifPresent(vital -> patientBuilder.addAttribute(vital,
+    patientNode.vitalState().ifPresent(vital -> patientBuilder.addAttribute(vital,
         "Observation.value.coding.where(system = 'http://dktk.dkfz.de/fhir/onco/core/CodeSystem/VitalstatusCS').code",
         CodeType.class, "urn:dktk:dataelement:53:3", PrimitiveType::getValue));
 
-    patientContainer.getVitalState().ifPresent(vital -> patientBuilder.addAttributeOptional(vital,
+    patientNode.vitalState().ifPresent(vital -> patientBuilder.addAttributeOptional(vital,
         "Observation.effective",
         DateTimeType.class, "urn:dktk:dataelement:48:3", DATE_STRING));
 
-    patientBuilder.addContainers(patientContainer.getConditionContainers().stream()
-        .map(c -> diagnosisMapping.map(c, patient))
-        .collect(Collectors.toList()));
+    patientBuilder.addContainers(patientNode.conditions().stream()
+        .map(diagnosisMapping::map)
+        .toList());
 
-    patientBuilder.addContainers(patientContainer.getSpecimenList().stream()
+    patientBuilder.addContainers(patientNode.specimens().stream()
         .map(sampleMapping::map)
-        .collect(Collectors.toList()));
+        .toList());
 
     return patientBuilder.build();
   }
