@@ -1,9 +1,9 @@
 package de.samply.store.adapter.fhir.service.mapping;
 
 import de.samply.share.model.ccp.Container;
-import de.samply.store.adapter.fhir.model.ConditionContainer;
+import de.samply.store.adapter.fhir.model.ConditionNode;
 import de.samply.store.adapter.fhir.service.FhirPathR4;
-import java.util.stream.Collectors;
+import java.util.Objects;
 import org.hl7.fhir.r4.model.CodeType;
 import org.hl7.fhir.r4.model.Observation;
 import org.hl7.fhir.r4.model.PrimitiveType;
@@ -11,41 +11,50 @@ import org.hl7.fhir.r4.model.StringType;
 import org.springframework.stereotype.Component;
 
 /**
- * Mapping of the Sample container.
- *
- * @author Patrick Skowronek
+ * Mapping of FHIR Condition and related resources to MDS Tumor.
  */
-
 @Component
 public class TumorMapping {
 
   private static final String ICD_0_3 = "urn:oid:2.16.840.1.113883.6.43.1";
   private static final String ADT_Site = "http://dktk.dkfz.de/fhir/onco/core/CodeSystem/SeitenlokalisationCS";
-  private final String url = "http://dktk.dkfz.de/fhir/StructureDefinition/onco-core-Extension-Fernmetastasen";
-
+  private static final String EXTENSION_FERNMETASTASEN = "http://dktk.dkfz.de/fhir/StructureDefinition/onco-core-Extension-Fernmetastasen";
 
   private final FhirPathR4 fhirPathR4;
-
   private final HistologyMapping histologyMapping;
   private final MetastasisMapping metastasisMapping;
   private final ProgressMapping progressMapping;
-  private final TNMMapping tnmMapping;
+  private final TnmMapping tnmMapping;
 
+  /**
+   * Creates a new TumorMapping.
+   *
+   * @param fhirPathR4 the FHIRPath engine
+   * @param histologyMapping histology mapping
+   * @param metastasisMapping metastasis mapping
+   * @param progressMapping progress mapping
+   * @param tnmMapping TNM mapping
+   */
   public TumorMapping(FhirPathR4 fhirPathR4,
       HistologyMapping histologyMapping,
       MetastasisMapping metastasisMapping,
       ProgressMapping progressMapping,
-      TNMMapping tnmMapping) {
-    this.fhirPathR4 = fhirPathR4;
-    this.histologyMapping = histologyMapping;
-    this.progressMapping = progressMapping;
-    this.metastasisMapping = metastasisMapping;
-    this.tnmMapping = tnmMapping;
+      TnmMapping tnmMapping) {
+    this.fhirPathR4 = Objects.requireNonNull(fhirPathR4);
+    this.histologyMapping = Objects.requireNonNull(histologyMapping);
+    this.progressMapping = Objects.requireNonNull(progressMapping);
+    this.metastasisMapping = Objects.requireNonNull(metastasisMapping);
+    this.tnmMapping = Objects.requireNonNull(tnmMapping);
   }
 
-  public Container map(ConditionContainer conditionContainer) {
-    var condition = conditionContainer.getCondition();
-    var builder = new ContainerBuilder(fhirPathR4, condition, "Tumor");
+  /**
+   * Maps FHIR Condition and related resources to MDS Tumor.
+   *
+   * @param node the node with the Condition and related resources
+   * @return the Tumor
+   */
+  public Container map(ConditionNode node) {
+    var builder = new ContainerBuilder(fhirPathR4, node.condition(), "Tumor");
 
     builder.addAttribute("Condition.bodySite.coding.where(system = '" + ICD_0_3 + "').code",
         CodeType.class, "urn:dktk:dataelement:4:2", PrimitiveType::getValue);
@@ -63,13 +72,11 @@ public class TumorMapping {
         metastasisMapping::map);
 
     builder.addContainer(
-        "Condition.extension.where(url = '" + url + "').value.resolve()",
+        "Condition.extension.where(url = '" + EXTENSION_FERNMETASTASEN + "').value.resolve()",
         Observation.class,
         tnmMapping::map);
 
-    builder.addContainers(conditionContainer.getClinicalImpressionContainers().stream()
-        .map(impression -> progressMapping.map(
-            impression.getClinicalImpression())).collect(Collectors.toList()));
+    builder.addContainers(node.clinicalImpressions().stream().map(progressMapping::map).toList());
 
     return builder.build();
   }
